--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
   --shadow: 0px 5px 20px 0px rgp(69 67 96 / 10%);
 
   /* Border Radious */
-  --border-radious: 20px;
+  --border-radius: 20px;
 }
 
 /* Responsive typography */
