--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -34,7 +34,7 @@
 .timeline .icon-briefcase,
 .timeline .icon-graduation {
   position: absolute;
-  left: -0.4375rem;
+  left: -0.8rem;
   top: 0;
   font-size: var(--h2-font-size);
   color: var(--first-color);
@@ -50,4 +50,38 @@
 .timeline__title {
   font-size: var(--h3-font-size);
   margin: 0.5rem 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .resume__container {
+    grid-template-columns: 450px;
+    justify-content: center;
+    row-gap: 1.875rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .resume__container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .timeline__item {
+    padding-left: 1.875rem;
+    padding-bottom: 1.875rem;
+  }
+
+  .timeline__item::before {
+    left: 0;
+  }
+
+  .timeline .icon-briefcase,
+  .timeline .icon-graduation {
+    left: -17px;
+  }
+
+  .timeline__text {
+    text-align: justify;
+  }
 }
