--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
   --font-bold: 700;
 
   /* Box Shadow */
-  --shadow: 0px 5px 20px 0px rgp(69 67 96 / 10%);
+  --shadow: 0px 5px 20px 0px rgba(69, 67, 96, 10%);
 
   /* Border Radious */
   --border-radius: 20px;
